trustfall_core/test_data/tests/valid_queries/fold_count_tag_used_inside_sibling_fold.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        value @output

        successor @fold @transform(op: "count") @tag(name: "tagged_count")

        predecessor @fold {
            value @filter(op: "=", value: ["%tagged_count"])
        }
    }
}"#,
    arguments: {},
)
