trustfall_core/test_data/tests/parse_errors/transform_first_directive.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        out_Directory_ContainsFile @transform(op: "count") @output {
            name @output
        }
    }
}"#,
    arguments: {},
)
